Thu Nov  5 19:16:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Shapes/Receiver/Receiver_exec.cpp:
        * connectors/dds4ccm/examples/Shapes/Sender/Sender_exec.cpp:
        * connectors/dds4ccm/impl/ndds/Connector_T.cpp:
          Fix some compile errors due to refactoring on head

Thu Nov  5 18:53:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        Integrated work of the dds4ccm_1 branch which extends the DDS4CCM
        connector infrastructure, adds a shapes component and adds timestamp
        to the hello world example for measuring latency

        Thu Nov  5 17:04:35 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Shapes/Receiver/Receiver_exec.cpp:
          Removed some printf statements.

        Thu Nov  5 16:32:02 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Shapes/Connector/Shapes_Connector_exec.h:
        * connectors/dds4ccm/examples/Shapes/Sender/Sender_exec.cpp:
          Resolved compiler errors.

        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
        * connectors/dds4ccm/impl/ndds/Updater_T.cpp:
          Removed some printf statements.

        Thu Nov  5 16:09:43 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
          Resolved compiler errors on linux.

        Thu Nov  5 16:06:58 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.cpp:
          Removed some printf statements.

        * connectors/dds4ccm/examples/Shapes/Connector/Shapes_Connector_exec.h:
          Added ConnectionStatusListener

        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
          Removed some comments and printf statements.

        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
        * connectors/dds4ccm/impl/ndds/Reader.cpp: