@@ -1,20 +1,0 @@
-// $Id$
-
-#include "RawListener.h"
-
-// Implementation skeleton constructor
-CCM_DDS_string_RawListener_i::CCM_DDS_string_RawListener_i (void)
-{
-}
-
-// Implementation skeleton destructor
-CCM_DDS_string_RawListener_i::~CCM_DDS_string_RawListener_i (void)
-{
-}
-
-void CCM_DDS_string_RawListener_i::on_data (
-  const char * an_instance,
-  const ::CCM_DDS::ReadInfo & info)
-{
-  // Add your implementation here
-}
